[project]
name = "django-encrypted-fields"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cffi==1.14.6",
    "cryptography==35.0.0",
    "django>=3.2",
    "pycparser==2.20",
]


##################
# ruff
##################
[tool.ruff]
fix = true
lint.fixable = ["ALL"]
lint.ignore = ["A003", "COM812", "D", "DJ008", "ERA001", "ISC001", "PLC2401", "PLC2403", "PT011", "RUF001", "S101", "S105", "S608", "SIM103", "TC001", "TC002", "TC003", "UP040"]
lint.select = ["ALL"]
lint.unfixable = ["ERA001", "F401"]
include = ["encrypted_fields/*.py", "package_test/*.py"]
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
